[tool.poetry]
name = "exploreasl-gui-docs"
version = "0.1.0"
description = ""
authors = ["Maurice Pasternak <maurice.pasternak@utoronto.ca>"]
readme = "README.md"
packages = [{ include = "exploreasl_gui_docs" }]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^9.1.15"
mike = "^1.1.2"
mkdocs-material-extensions = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
